[package]
name = "sht31"
description = "A library for the SHT31 temperature and humidity sensor"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/FloppyDisck/SHT31-rs"
readme = "README.md"
keywords = ["embedded", "sensor", "temperature", "humidity"]
categories = ["embedded"]

[features]
esp32-fix = []
thiserror = ["dep:thiserror"]

[dependencies]
embedded-hal            = "0.2.7"

crc = "3.0.0"
thiserror = {version= "1.0.38", optional = true}