[package]
name = "sht31"
description = "A library for the SHT31 temperature and humidity sensor"
version = "0.3.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/FloppyDisck/SHT31-rs"
readme = "README.md"
keywords = ["embedded", "sensor", "temperature", "humidity"]
categories = ["embedded"]

[dependencies]
embedded-hal = "1.0.0"
crc = "3.0.0"
thiserror = { version = "2.0.3", default-features = false }

[dev-dependencies]
embedded-hal-mock = "0.11.1"
rstest = "0.21.0"